syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "OrderFactExtendProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// Order fact entity
message OrderFactData {
    option (routines.entity_type) = "OrderFact";
    option (routines.keys).keys = "order_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: orderId
    // fields
    string order_id = 1 [json_name = "order_id", (google.api.graphql.relay_options).id = true];
    string invoice_id = 2 [json_name = "invoice_id"];
    string payment_id = 3 [json_name = "payment_id"];
    string payment_gateway_response_id = 4 [json_name = "payment_gateway_response_id"];
    string order_payment_preference_id = 5 [json_name = "order_payment_preference_id"];
    string billing_account_id = 6 [json_name = "billing_account_id"];
    string shipment_id = 7 [json_name = "shipment_id"];
    string order_fact_type_id = 8 [json_name = "order_fact_type_id"];
    string status_id = 9 [json_name = "status_id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 10 [json_name = "last_updated_tx_stamp"];
    google.protobuf.Timestamp created_tx_stamp = 11 [json_name = "created_tx_stamp"];
    
        

    // extra
    google.protobuf.Struct extra = 18;
    map<string, google.protobuf.Any> attachments = 19;
}


message OrderFactKey{
    string order_id = 1 [json_name = "order_id", (google.api.graphql.relay_options).id = true];
}

message OrderFactList{
    repeated OrderFactData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListOrderFacts` method to retrieve the next
    // page of results.
    string next_page_token = 2;
}


// Order Fact Type Entity
message OrderFactTypeData {
    option (routines.entity_type) = "OrderFactType";
    option (routines.keys).keys = "order_fact_type_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: orderFactTypeId
    // fields
    string order_fact_type_id = 1 [json_name = "order_fact_type_id", (google.api.graphql.relay_options).id = true];
    string parent_type_id = 2 [json_name = "parent_type_id"];
    string description = 3 [json_name = "description"];
    google.protobuf.Timestamp last_updated_tx_stamp = 4 [json_name = "last_updated_tx_stamp"];
    google.protobuf.Timestamp created_tx_stamp = 5 [json_name = "created_tx_stamp"];
    
        

    // extra
    google.protobuf.Struct extra = 9;
    map<string, google.protobuf.Any> attachments = 10;
}


message OrderFactTypeKey{
    string order_fact_type_id = 1 [json_name = "order_fact_type_id", (google.api.graphql.relay_options).id = true];
}

message OrderFactTypeList{
    repeated OrderFactTypeData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListOrderFactTypes` method to retrieve the next
    // page of results.
    string next_page_token = 2;
}


// Order Fact Status Entity
message OrderFactStatusData {
    option (routines.entity_type) = "OrderFactStatus";
    option (routines.keys).keys = "order_fact_id, status_date";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: orderFactId, statusDate
    // fields
    string order_fact_id = 1 [json_name = "order_fact_id"];
    google.protobuf.Timestamp status_date = 2 [json_name = "status_date"];
    google.protobuf.Timestamp status_end_date = 3 [json_name = "status_end_date"];
    string change_by_user_login_id = 4 [json_name = "change_by_user_login_id"];
    string status_id = 5 [json_name = "status_id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 6 [json_name = "last_updated_tx_stamp"];
    google.protobuf.Timestamp created_tx_stamp = 7 [json_name = "created_tx_stamp"];
    string id = 8 [json_name = "id", (google.api.graphql.relay_options).id = true];
    
        

    // extra
    google.protobuf.Struct extra = 13;
    map<string, google.protobuf.Any> attachments = 14;
}


message OrderFactStatusKey{
    string order_fact_id = 1 [json_name = "order_fact_id"];
    google.protobuf.Timestamp status_date = 2 [json_name = "status_date"];
}

message OrderFactStatusList{
    repeated OrderFactStatusData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListOrderFactStatuses` method to retrieve the next
    // page of results.
    string next_page_token = 2;
}


